INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_BINARY_DIR}
	${Boost_INCLUDE_DIR}
)
ADD_DEFINITIONS(-DUSING_MAIN)
LINK_DIRECTORIES("${CMAKE_BINARY_DIR}/src")
ADD_EXECUTABLE(torus torus.cpp sim_runner.cpp)
TARGET_LINK_LIBRARIES(torus nemo)

ADD_EXECUTABLE(random1k random1k.cpp sim_runner.cpp)
TARGET_LINK_LIBRARIES(random1k nemo)

SET(INSTALL_FILES torus.cpp random1k.cpp sim_runner.cpp)

IF(UNIX)
	SET(INSTALL_EXAMPLE_SRC_DIR "share/nemo/examples")
	SET(INSTALL_EXAMPLE_BIN_DIR "share/nemo/examples")
ENDIF(UNIX)

IF(WIN32)
	SET(INSTALL_EXAMPLE_SRC_DIR "examples")
	SET(INSTALL_EXAMPLE_BIN_DIR "examples")
ENDIF(WIN32)

INSTALL(FILES ${INSTALL_FILES} DESTINATION ${INSTALL_EXAMPLE_SRC_DIR})
INSTALL(TARGETS random1k torus DESTINATION ${INSTALL_EXAMPLE_BIN_DIR})
