# TODO: perform static linking against boost_python here
FIND_PACKAGE(Boost REQUIRED COMPONENTS python)
FIND_PACKAGE(PythonLibs REQUIRED)

LINK_LIBRARIES(${Boost_LIBRARIES})
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_BINARY_DIR}
	${Boost_INCLUDE_DIR}
	${PYTHON_INCLUDE_PATH}
)

ADD_LIBRARY(nemo_py SHARED nemo_py.cpp)
SET_TARGET_PROPERTIES(nemo_py PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(nemo_py PROPERTIES OUTPUT_NAME "nemo")
TARGET_LINK_LIBRARIES(nemo_py nemo)

IF(WIN32)
	SET(INSTALL_DIR Python/nemo)
ELSE(WIN32)
	SET(INSTALL_DIR share/nemo/python/nemo)
ENDIF(WIN32)

INSTALL(TARGETS nemo_py DESTINATION ${INSTALL_DIR})
INSTALL(FILES __init__.py DESTINATION ${INSTALL_DIR})
INSTALL(PROGRAMS example.py DESTINATION ${INSTALL_DIR}/..)
