FIND_PACKAGE(Boost REQUIRED COMPONENTS python)
FIND_PACKAGE(PythonLibs REQUIRED)

IF(WIN32)
	ADD_DEFINITIONS(-DBOOST_PYTHON_STATIC_LIB)
ENDIF(WIN32)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_BINARY_DIR}
	${Boost_INCLUDE_DIR}
	${PYTHON_INCLUDE_PATH}
)

LINK_STATIC_MSVCR()

SET(BUILD_SHARED_LIBS TRUE)

ADD_LIBRARY(nemo_py nemo_py.cpp)

SET_TARGET_PROPERTIES(nemo_py PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(nemo_py PROPERTIES OUTPUT_NAME "nemo")
IF(WIN32)
	SET_TARGET_PROPERTIES(nemo_py PROPERTIES SUFFIX ".pyd")
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(nemo_py nemo ${Boost_LIBRARIES} ${PYTHON_LIBRARY})

IF(WIN32)
	SET(INSTALL_DIR Python/nemo)
ELSE(WIN32)
	SET(INSTALL_DIR share/nemo/python/nemo)
ENDIF(WIN32)

INSTALL(TARGETS nemo_py DESTINATION ${INSTALL_DIR})
INSTALL(FILES __init__.py DESTINATION ${INSTALL_DIR})
INSTALL(PROGRAMS example.py test.py DESTINATION ${INSTALL_DIR}/..)
