OPTION(NEMO_CPU_MULTITHREADED "Use multithreaded CPU backend" OFF)

SET(SOURCES Simulation.cpp)

IF(NEMO_CPU_MULTITHREADED)
	FIND_PACKAGE(Boost REQUIRED COMPONENTS thread)
	LIST(APPEND SOURCES "Worker.cpp")
ENDIF(NEMO_CPU_MULTITHREADED)

INCLUDE_DIRECTORIES(
	${CMAKE_BINARY_DIR}  # for configuration files
	${CMAKE_SOURCE_DIR}
	${Boost_INCLUDE_DIR}
)

ADD_LIBRARY(nemo_cpu ${SOURCES})
SET_TARGET_PROPERTIES(nemo_base PROPERTIES DEFINE_SYMBOL NEMO_CPU_EXPORTS)
TARGET_LINK_LIBRARIES(nemo_cpu nemo_base ${Boost_LIBRARIES})
