INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
)

ADD_LIBRARY(Izhikevich_cpu SHARED Izhikevich.cpp)
SET_TARGET_PROPERTIES(Izhikevich_cpu PROPERTIES OUTPUT_NAME "Izhikevich")
SET_TARGET_PROPERTIES(Izhikevich_cpu PROPERTIES DEFINE_SYMBOL NEMO_PLUGIN_EXPORTS)
INSTALL(TARGETS Izhikevich_cpu DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cpu)
TARGET_LINK_LIBRARIES(Izhikevich_cpu nemo_base)
