CUDA_INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
	${CMAKE_SOURCE_DIR}/src/nemo/cuda
  )

ADD_DEFINITIONS(-DNEMO_PLUGIN_EXPORTS)

CUDA_ADD_LIBRARY(PoissonSource_cuda SHARED PoissonSource.cu)
SET_TARGET_PROPERTIES(PoissonSource_cuda PROPERTIES OUTPUT_NAME "PoissonSource")
INSTALL(TARGETS PoissonSource_cuda DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cuda)

CUDA_ADD_LIBRARY(Izhikevich_cuda SHARED Izhikevich.cu)
SET_TARGET_PROPERTIES(Izhikevich_cuda PROPERTIES OUTPUT_NAME "Izhikevich")
INSTALL(TARGETS Izhikevich_cuda DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cuda)

CUDA_ADD_LIBRARY(Kuramoto_cuda SHARED Kuramoto.cu)
SET_TARGET_PROPERTIES(Kuramoto_cuda PROPERTIES OUTPUT_NAME "Kuramoto")
INSTALL(TARGETS Kuramoto_cuda DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cuda)
